syntax = "proto3";

package tea.analysis;
option java_package = 'com.neuromancer42.tea.core.analysis';

message DomInfo {
    string name = 1;
    optional string description = 2;
}

message RelInfo {
    string name = 1;
    repeated string dom = 2;
    optional string description = 3;
}

message DomTrgt {
    DomInfo info = 1;
    string location = 2;
}

message RelTrgt {
    RelInfo info = 1;
    string location = 2;
}

message Tuple {
    string rel_name = 1;
    repeated string attribute = 2;
}

message Constraint {
    Tuple head_tuple = 1;
    repeated Tuple body_tuple = 2;
    optional string rule_info = 3;
}